DevOps/Kubernetes/Certified Kubernetes Administrator (CKA)/Services/Lab/Managing Access from Outside with K8s Ingress/ingress-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-demo-deployment
  labels:
    app: httpd
# this is the deployment spec, not a pod spec
spec:
  replicas: 1
  # use the selector to locate which pod are going to be managed by this deployment
  selector:
    # any pods that match the selector will be managed by this deployment
    matchLabels:
      app: httpd
  # pod template
  template:
    metadata:
      # use the same label as above, to make sure the pods that are created by this deployment will be detected by the selector, so that the deployment can manage these pods
      labels:
        app: httpd
    # pod spec    
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
