DevOps/Kubernetes/Certified Kubernetes Administrator (CKA)/Services/Lab/Managing Access from Outside with K8s Ingress/ingress-demo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-demo-svc
spec:
  type: ClusterIP
  # determine to which pod the service is gonna route traffic
  selector:
    app: httpd
  ports:
    - protocol: TCP
      # the port that the service is listening
      port: 80
      # the port that the service is routing to the backend pod
      targetPort: 80
