DevOps/Kubernetes/Certified Kubernetes Administrator (CKA)/Services/Lab/Managing Access from Outside with K8s Ingress/ingress-localhost.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-localhost
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-demo-svc
            port:
             number: 80
